# ppgso-project

./: CMakeLists.txt  README.md
data/: rock.mtl
ppgso/: shader.cpp  shader.h  window.cpp
shader/: depth_vert.glsl  phongo_frag.glsl  phongo_vert.glsl  test_frag.glsl  test_vert.glsl
src/: VirtualObject.h  animated_object.cpp  animated_object.h  builidng.cpp  camera.cpp  camera.h  doors.cpp  doors.h  double_doors.cpp  double_doors.h  main.cpp  object.cpp  object.h  scene.cpp  scene.h  scene_window.cpp  scene_window.h  skybox.cpp  skybox.h  staticObject.cpp  staticObject.h  terrain.cpp  terrain.h  terrain_desert.cpp  terrain_desert.h  tumbleweed.cpp  tumbleweed.h
src/Lighting/: Light.cpp  Light.h  colorBulb.cpp  colorBulb.h  spotlight.cpp  spotlight.h  sun.cpp  sun.h
src/interior_objects/: confetti.cpp  confetti.h
src/interior_objects/human/: arm.cpp  arm.h  human.cpp  human.h
src/interior_objects/roulette/: roulette_moving.cpp  roulette_moving.h  roulette_table.cpp  roulette_table.h  roulette_wheel.cpp  roulette_wheel.h
src/interior_objects/slot_machine/: screen.cpp  screen.h  slot_machine.cpp  slot_machine.h
src/outside_objects/: building.cpp  building.h  builidng.cpp  skybox.cpp  skybox.h  tumbleweed.cpp  tumbleweed.h
src/outside_objects/doors/: doors.cpp  doors.h  double_doors.cpp  double_doors.h
src/sky/: skydome.cpp  skydome.h
src/terrain/: VirtualObject.h  terrain.cpp  terrain.h
src/thrash/: VirtualObject.cpp  VirtualObject.h
src/utilities/: heightmap.cpp  heightmap.h  terrain.cpp  utils.cpp  utils.h
